--- a/SpiteAndMalice HTML/SpiteAndMalice.html
+++ b/SpiteAndMalice HTML/SpiteAndMalice.html
@@ -9,7 +9,7 @@
 
     <title>Spite and Malice</title>
   </head>
-  <body>
+  <body class="background">
     <div class="table">
       <div class="side-stack-container">
         <div class="side-stack-card">20</div>
@@ -41,12 +41,22 @@
         </div>
       </div>
 
-      <div class="eight">8 -DECK OF CARDS</div>
+      <div class="eight">
+        <div class="the-deck"></div>
+      </div>
       <div class="nine">/</div>
-      <div class="ten">10</div>
-      <div class="c11">11</div>
-      <div class="c12">12</div>
-      <div class="c13">13</div>
+      <div class="center-stacks">
+        <div class="proba">proba 10</div>
+      </div>
+      <div class="center-stacks">
+        <div class="proba">proba 11</div>
+      </div>
+      <div class="center-stacks">
+        <div class="proba">proba 12</div>
+      </div>
+      <div class="center-stacks">
+        <div class="proba">proba 13</div>
+      </div>
       <div class="c14">/</div>
       <div class="extra-wide-player">
         <div class="card-to-go">
