--- a/SpiteAndMalice HTML/SpiteAndMaliceFlex.html
+++ b/SpiteAndMalice HTML/SpiteAndMaliceFlex.html
@@ -12,13 +12,13 @@
     <div class="playing-area">
       <div class="one">
         <div class="div-copy-of-player-hand">
-          <div class="player-hand">
+          <div class="player-hand player-hand-opponent">
             <div class="cards-available-opponent">
               <div class="stock-card"></div>
               <div class="stock-card second-card"></div>
               <div class="stock-card third-card"></div>
               <div class="stock-card fourth-card"></div>
-              <div class="stock-card fiftth-card"></div>
+              <div class="stock-card fifth-card"></div>
             </div>
             <div class="card-to-go-opponent stock-card"></div>
           </div>
@@ -58,11 +58,11 @@
           <div class="player-hand">
             <div class="card-to-go-player stock-card"></div>
             <div class="cards-available-player">
-              <div class="stock-card">1</div>
-              <div class="stock-card second-card">2</div>
-              <div class="stock-card third-card">3</div>
-              <div class="stock-card fourth-card">4</div>
-              <div class="stock-card fiftth-card">5</div>
+              <div class="stock-card"></div>
+              <div class="stock-card second-card"></div>
+              <div class="stock-card third-card"></div>
+              <div class="stock-card fourth-card"></div>
+              <div id="displaying-a-card" class="stock-card fifth-card"></div>
             </div>
           </div>
           <div class="cards-left-design player-cards-left-position">
