--- a/SpiteAndMalice HTML/SpiteAndMaliceFlex.html
+++ b/SpiteAndMalice HTML/SpiteAndMaliceFlex.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="flexDesign.css" />
+    <link rel="stylesheet" href="displayingCard.css" />
+    <link rel="stylesheet" href="glowing-card.css" />
+    <script src="app.js" defer></script>
     <title>Spite and Malice - Flex version</title>
   </head>
   <body>
