--- a/SpiteAndMalice HTML/SpiteAndMaliceFlex.html
+++ b/SpiteAndMalice HTML/SpiteAndMaliceFlex.html
@@ -61,11 +61,11 @@
           <div class="player-hand">
             <div class="card-to-go-player stock-card"></div>
             <div class="cards-available-player">
-              <div class="stock-card"></div>
-              <div class="stock-card second-card"></div>
-              <div class="stock-card third-card"></div>
-              <div class="stock-card fourth-card"></div>
-              <div id="displaying-a-card" class="stock-card fifth-card"></div>
+              <div class="stock-card displaying-a-card"></div>
+              <div class="stock-card second-card displaying-a-card"></div>
+              <div class="stock-card third-card displaying-a-card"></div>
+              <div class="stock-card fourth-card displaying-a-card"></div>
+              <div class="stock-card fifth-card displaying-a-card"></div>
             </div>
           </div>
           <div class="cards-left-design player-cards-left-position">
