--- a/SpiteAndMalice HTML/SpiteAndMaliceFlex.html
+++ b/SpiteAndMalice HTML/SpiteAndMaliceFlex.html
@@ -17,7 +17,7 @@
         <div class="div-copy-of-player-hand">
           <div class="player-hand player-hand-opponent">
             <div class="cards-available-opponent">
-              <div class="stock-card"></div>
+              <div class="stock-card first-card"></div>
               <div class="stock-card second-card"></div>
               <div class="stock-card third-card"></div>
               <div class="stock-card fourth-card"></div>
@@ -61,7 +61,7 @@
           <div class="player-hand">
             <div class="card-to-go-player stock-card"></div>
             <div class="cards-available-player">
-              <div class="stock-card displaying-a-card"></div>
+              <div class="stock-card first-card displaying-a-card"></div>
               <div class="stock-card second-card displaying-a-card"></div>
               <div class="stock-card third-card displaying-a-card"></div>
               <div class="stock-card fourth-card displaying-a-card"></div>
